# docs/swagger.json
@@ -195,7 +195,7 @@
                 }
             }
         },
-        "/user/addcommmits": {
+        "/user/addcomments": {
             "post": {
                 "description": "article_id content token  为必填",
                 "consumes": [
@@ -239,7 +239,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{ \"code\": 200, \"msg\": \"更新成功！\" }",
+                        "description": "{\"code\":200,\"msg\":\"评论成功！\"}",
                         "schema": {
                             "type": "string"
                         }
